chore: Sprint 1